2017-11-02  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-852

	* controlfiles/instruments/hirs/TestHIRS_fast.arts,
	controlfiles/instruments/hirs/TestHIRS_reference.arts:

	Merge HIRS test cases into two stand-alone files after discussion with
	Stefan. The files were split up into too many, confusing small control
	files.

	The reference file currently fails in sensor_responseBackend (same
	error as the original before merging). Needs further investigation.

	* controlfiles/instruments/hirs/TestHIRS.arts,
	controlfiles/instruments/hirs/hirs_fast.arts,
	controlfiles/instruments/hirs/hirs_general.arts,
	controlfiles/instruments/hirs/hirs_hitran.arts,
	controlfiles/instruments/hirs/hirs_reference.arts,
	controlfiles/instruments/hirs/hirs_sensor_common.arts,
	controlfiles/instruments/hirs/hirs_sensor_fast.arts,
	controlfiles/instruments/hirs/hirs_sensor_reference.arts,
	controlfiles/instruments/hirs/hirs_spectroscopy.arts:

	Removed.

	* controlfiles/CMakeLists.txt:

	Add TestHIRS_reference to nocheck category.

2017-11-01  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-851

	* doc/uguide/references.bib: Added two references, used in PSD chapter.

	* doc/uguide/clouds_theory.tex: A restart of this chapter. It is
	now dedicated to PSDs. So far containing the math behind the MGD PSDs.

	* doc/uguide/CMakeLists.txt: clouds_theory.tex was missing.

	* src/m_microphysics.cc (psdMgdMassMeanParticleSize): New WSM.

	(psdMH97, psdW16): Now takes scat_species_a and scat_species_b as
	input, and the values are checked to be reasonable. Corrected
	header text.

	(psdMgdMass,psdMgdMassXmean,psdMgdMassXmedian): Cosmetic changes,
	to make the code more consistent with the documentation.

	(psdF07): scat_species_a and scat_species_b now always checked.
	Corrected header text.

2017-10-30 Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-850

	* src/absorption.cc: Added some comments and changed
	the range (it did not work when cutoff-range was inside
	range)
